<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/app_name" >
            <menu >
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_discover_basket_orange_24dp"
                    android:title="@string/Store" />
                <item
                    android:id="@+id/nav_search"
                    android:icon="@drawable/ic_search_oragne_24dp"
                    android:title="@string/Search" />
                <item
                    android:id="@+id/nav_orders"
                    android:icon="@drawable/ic_bills_turned_in_black_24dp"
                    android:title="@string/Orders" />
                <item
                    android:id="@+id/nav_cart"
                    android:icon="@drawable/ic_shopping_cart_black_24dp"
                    android:title="@string/cart" />
                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/ic_person_black_24dp"
                    android:title="@string/account" />
                <item
                    android:id="@+id/setting"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/contactUs"
                    android:icon="@drawable/ic_contact_phone_black_24dp"
                    android:title="@string/contact_us" />

            </menu>
        </item>

    </group>

    <item android:title="ADMIN">
        <menu>
            <item
                android:id="@+id/adminDashboard"
                android:icon="@drawable/ic_create_black_24dp"
                android:title="@string/admin_dashboard" />
        </menu>
    </item>

</menu>
