<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/thank_you"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/exite_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <Button
            android:id="@+id/shareapp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/cart_submit_btn_background"
            android:text="@string/share_app"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="14sp" />

        <Button
            android:id="@+id/reteus"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/cart_submit_btn_background"
            android:text="@string/rate"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="14sp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/cart_submit_btn_background"
            android:text="@string/exit"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>